--- a/PrecMeta.org
+++ b/PrecMeta.org
@@ -22,11 +22,11 @@ The following software packages were used
 
 ** Reproducing the analysis
 
-Currently, the datasets in this repository include the full original data for work by the authors, and can be found in the subdirectories =Barr2008=, =BarrKeysar2002=, and =KronmullerBarr2007=.  Data from other authors will be included in the repository once permissions have been obtained.  Until all relevant permissions have been obtained it is only possible to reproduce the plots (third "entry point" below).
+The full original data can be found in the subdirectories [[file:Barr2008][Barr2008]], [[file:BarrKeysar2002][BarrKeysar2002]], [[file:Brown-Schmidt2009][Brown-Schmidt2009]], [[file:HortonSlaten2012][HortonSlaten2012]], and [[file:KronmullerBarr2007][KronmullerBarr2007]].  The remaining data will be included once permission has been obtained.  Until then it is only possible to reproduce the plots (third "entry point" below).
 
 /There are three "entry points" for reproducing the analysis./
 
-FIRST ENTRY POINT:
+*** FIRST ENTRY POINT:
 
 From scratch!  Start in the section entitled "Preprocessing".  To
 make this work you will need to know how install and access data
@@ -43,12 +43,12 @@ memory)
   sed -i.bak Grounding2.sql s/timestamp/varchar/g
 #+end_example
 
-SECOND ENTRY POINT:
+*** SECOND ENTRY POINT:
 
 From the post-preprocessing stage.  Skip the "Preprocessing" section below and
 start with "Derive all the effects and bootstrap CIs."
 
-THIRD ENTRY POINT:
+*** THIRD ENTRY POINT:
 
 Just create the plots.  Start at "Plot" section.
 
@@ -111,14 +111,9 @@ Just create the plots.  Start at "Plot" section.
       select(-Who, -Grnd) %>% as.data.frame()
 
   saveRDS(edat_bin4, file="BarrKeysar2002/Experiment2.rds")
-#+END_SRC
 
-*** Plot
-
-#+BEGIN_SRC R
-  library(dplyr)
+  # just quickly create a plot
   library(ggplot2)
-
   edat_bin4 <- readRDS("BarrKeysar2002/Experiment2.rds")
 
   edat_plot <- edat_bin4 %>%
@@ -127,7 +122,6 @@ Just create the plots.  Start at "Plot" section.
 
   ggplot(edat_plot, aes(x=bin, y=mTAdv, color=Speaker, shape=Grounded)) + geom_line() + geom_point()
 #+END_SRC
-
 
 ** DONE Metzing & Brennan 2003
 	 CLOSED: [2014-12-29 Mon 19:26]
